# TREBLE

./: CLAUDE.md  README.md  pyproject.toml
examples/: basic_example.py  generic_features_example.py
tests/: test_windows.py
treble/: __init__.py  umap_tools.py  windows.py
treble_py/: README.md  error.txt  pyproject.toml
treble_py/treble/: __init__.py  analysis.py  visualization.py
