[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "treble_py"
version = "0.1.0"
description = "Python implementation of TREBLE (Time REsolved BehavioraL Embedding)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Claude", email = "noreply@anthropic.com"},
]
dependencies = [
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "umap-learn>=0.5.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["treble"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]